# Catch-me-if-you-can

./: .gitignore  README.md  TODO.md  astar.py  entities.py  main.py  main_fixed.py  main_fixed_original.py  minimax.py  pyproject.toml  requirements.txt  storage.py
.github/workflows/: ci.yml
data/: scores.json  settings.json
tests/: test_astar_minimax.py
